[gd_scene load_steps=5 format=2]

[ext_resource path="res://NPCs/Friendly/Friendly.gd" type="Script" id=1]
[ext_resource path="res://NPCs/Friendly/npc.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="Animation" id=2]
resource_name = "Active"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 10 ]
}

[node name="Friendly" type="KinematicBody2D"]
z_index = -1
collision_layer = 1072
collision_mask = 1072
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 6

[node name="Eyes" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 10

[node name="FloorDetectorL" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -20, 20 )
collision_mask = 2079

[node name="FloorDetectorR" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 20, 20 )
collision_mask = 2079

[node name="RCLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -24, 0 )
collision_mask = 2079

[node name="RCRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 24, 0 )
collision_mask = 2079

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -8, -8, 16, 16 )

[node name="RCJumpableRight" type="RayCast2D" parent="."]
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( 24, 0 )
collision_mask = 2079

[node name="RCJumpableLeft" type="RayCast2D" parent="."]
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( -24, 0 )
collision_mask = 2079

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Active = SubResource( 2 )

[node name="WanderTimer" type="Timer" parent="."]
one_shot = true

[node name="AngerTimer" type="Timer" parent="."]
one_shot = true
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
[connection signal="timeout" from="AngerTimer" to="." method="_on_AngerTimer_timeout"]
